force-app/main/default/objects/Partner_Incentive_and_Price__c/Partner_Incentive_and_Price__c.object-meta.xml
<CustomObject>
    <description>**Do Not Delete** this is for the type of incentive and pricing that a partner has access to</description>
    <label>Partner Incentive and Price</label>
    <nameField>
        <label>Partner Incentive Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Incentives and Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>