force-app/main/default/objects/Partner_Incentive_and_Price__c/fields/isRegional__c.field-meta.xml
<CustomField>
    <fullName>isRegional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if country based, then false, if many countries in a region, then true</description>
    <label>isRegional</label>
    <type>Checkbox</type>
</CustomField>