force-app/main/default/objects/Partner_Incentive_and_Price__c/fields/Spiff__c.field-meta.xml
<CustomField>
    <fullName>Spiff__c</fullName>
    <label>Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>